# ggml-mnist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  mnist-common.cpp  mnist-eval.cpp  mnist-train.cpp  mnist_data.cpp  mnist_data.hpp  mnist_model.cpp  mnist_model.hpp  utils.hpp
tests/: CMakeLists.txt  test_ggml.cpp  test_mnist_data.cpp  test_mnist_model.cpp
tools/: data.py
